--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -7,6 +7,7 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>Bootstrap Example</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
     <style>
         table, th, td {
@@ -16,7 +17,7 @@
 </head>
 <body>
 
-    <nav class="navbar dark p-2 bg-primary shadow-lg">
+    <nav class="navbar dark p-2 bg-white shadow-lg">
         <a class="navbar-brand">Navbar</a>
         <form class="form-inline">
         {% if request.user.is_authenticated%}    
