--- a/project/templates/users/dashboard.html
+++ b/project/templates/users/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block start %}
     <h2>Welcome {{request.user}}</h2>
     <p> Welcome to the Dashboard.</p>
     <p> You are here it means the authentication worked !!!</p>
