--- a/project/templates/users/login.html
+++ b/project/templates/users/login.html
@@ -3,76 +3,52 @@
 {% block start %}
 
 
-{% if messages %}
-{% for message in messages %}
-<div class="alert alert-success" role="alert">
-  {% if message.tags %}{{ message }}{% endif %}
-</div> 
-{% endfor %}
-{% endif %}
-{% comment %} 
-<form class="col-6 mx-auto card p-4 m-4 shadow-lg" action="" method="POST" >
-  {% csrf_token %}
-    <!-- Email input -->
-    {{form.username.label_tag}}
-    {{ form.username }}
-    {{form.username.errors}}
-    {{form.password.label_tag}}
-    {{ form.password}}
-    {{form.password.errors}}
 
+<section class="bg-gray-50  bg-gradient-to-t from-green-300 via-transparent to-orange-300">
+  <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+     
 
-  
-      <div class="col">
-        <!-- Simple link -->
-        <a href="#!">Forgot password?</a>
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-success" role="alert">
+      {% if message.tags %}{{ message }}{% endif %}
+    </div> 
+    {% endfor %}
+    {% endif %}
+
+      <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+          <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+              <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
+                  Sign in to your account
+              </h1>
+              <form class="space-y-4 md:space-y-6" action="#" method="POST">
+                  {% csrf_token %}
+                  <div>
+                      {{form.username | as_crispy_field}}
+                      {{form.username.errors}}
+                  </div>
+                  <div>
+                     {{ form.password | as_crispy_field }}
+                      {{form.password.errors}}
+                  </div>
+                  <div class="flex items-center justify-between">
+                      <div class="flex items-start">
+                          <div class="flex items-center h-5">
+                            <input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" required="">
+                          </div>
+                          <div class="ml-3 text-sm">
+                            <label for="remember" class="text-gray-500 dark:text-gray-300">Remember me</label>
+                          </div>
+                      </div>
+                      <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
+                  </div>
+                  <button type="submit" class="w-full text-white  bg-blue-600 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center  ">Sign in</button>
+                  <p class="text-sm font-light text-gray-500 dark:text-gray-400">
+                      Don’t have an account yet? <a href="{% url 'users:register_student' %}" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Sign up</a>
+                  </p>
+              </form>
+          </div>
       </div>
-    </div>
-  
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
-   {% endcomment %}
-    <!-- Register buttons -->
-
-    <div class="bg-white p-8 rounded shadow-md w-96">
-      <h1 class="text-2xl font-semibold mb-4">Login</h1>
-
-      <form id="loginForm" method="post" action="{% url 'users:student_login' %}">
-          {% csrf_token %}
-          
-          <div class="mb-4">
-              <label for="username" class="block text-sm font-medium text-gray-600">Username</label>
-              <input type="text" name="username" id="username" class="mt-1 p-2 w-full border rounded-md">
-          </div>
-
-          <div class="mb-4">
-              <label for="password" class="block text-sm font-medium text-gray-600">Password</label>
-              <input type="password" name="password" id="password" class="mt-1 p-2 w-full border rounded-md">
-          </div>
-
-          <button type="submit" class="bg-blue-500 text-white py-2 px-4 rounded-md">Login</button>
-      </form>
   </div>
-
-
-    <div class="text-center">
-      <p>Not a member? <a href="/register">Register</a></p>
-      <p>or sign up with:</p>
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-facebook-f"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-google"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-twitter"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-github"></i>
-      </button>
-    </div>
-  </form>
+</section>
 {% endblock start %}
