--- a/project/templates/users/register.html
+++ b/project/templates/users/register.html
@@ -10,11 +10,11 @@
       </div> 
     {% endfor %}
   {% endif %}
-  <div class="container-fluid h-100">
+  <div class="container-fluid h-100 ">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-lg-12 col-xl-11">
         <div class="card text-black" style="border-radius: 25px;">
-          <div class="card-body p-md-5">
+          <div class="card-body p-md-5 bg-gradient-to-t from-green-300 via-transparent to-orange-300 rounded-4">
             <div class="row justify-content-center">
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
@@ -25,12 +25,11 @@
 
                   <div class="row">
                     <!-- Column 1: CustomUser Form -->
-                    <div class="col-md-6 px-5">
+                    <div class="col-md-6 px-5 py-1">
                       {{ user_form.first_name | as_crispy_field }}
                       
                       {{ user_form.username | as_crispy_field }}
                      
-                    
                       {{ user_form.password | as_crispy_field }}
                       {{ user_form.password2 | as_crispy_field }}
                       <!-- Add other CustomUser fields here -->
@@ -52,8 +51,8 @@
                   </div>
 
                   <div class="form-check d-flex justify-content-center mb-5">
-                    <p>Already registered </p> 
-                    <a href="/login"> Login</a>
+                    <p>Already registered?  </p> 
+                    <a href="{% url 'users:student_login' %}" class='text-blue-400'> Login</a>
                   </div>
 
                   
